Update Playwright test scripts in package.json to streamline end-to-end testing
- Changed the 'test:e2e' command to specify the 'chromium' project for more consistent testing.
- Added 'test:e2e:all' command to run all Playwright tests, enhancing testing flexibility.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
 		"typecheck": "tsc --noEmit",
 		"test": "vitest --environment jsdom",
 		"test:watch": "vitest --watch --environment jsdom",
-		"test:e2e": "playwright test",
-		"test:e2e:ui": "playwright test --ui",
+		"test:e2e": "playwright test --project=chromium",
+		"test:e2e:all": "playwright test",
+		"test:e2e:ui": "playwright test --project=chromium --ui",
 		"lint": "biome check .",
 		"lint:fix": "biome check --write .",
 		"format": "biome format --write ."
